--- a/index.html
+++ b/index.html
@@ -93,11 +93,8 @@
         
         <!-- Text overlay -->
         <div class="text-overlay" id="textOverlay">
-            <p>scroll down for zero point mandalas</p>
+            <p>scroll down for zero<br>point mandalas</p>
         </div>
-        
-        <!-- Growing white circle overlay -->
-        <div class="white-circle-overlay" id="whiteCircle"></div>
     </section>
 
     <!-- Product Listing Section -->
