--- a/version3.html
+++ b/version3.html
@@ -4,25 +4,56 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Zero Point Mandalas - Version 3</title>
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="styles-v3.css">
 </head>
 <body>
     <!-- Navigation Menu -->
     <nav class="nav-menu visible">
         <div class="nav-container">
-            <a href="index.html" class="nav-link">Version 1</a>
+            <a href="version1.html" class="nav-link">Version 1</a>
             <a href="version2.html" class="nav-link">Version 2</a>
             <a href="version3.html" class="nav-link active">Version 3</a>
             <a href="version4.html" class="nav-link">Version 4</a>
         </div>
     </nav>
 
-    <section class="products-section" style="padding-top: 6rem;">
-        <div class="products-container">
-            <h2>Version 3 - Coming Soon</h2>
-            <p style="text-align: center; color: #666;">This version will be based on 5.png</p>
+    <!-- Splash Section -->
+    <section class="splash-section" id="splashSection">
+        <div class="grid-container" id="gridContainer"></div>
+        <div class="text-overlay" id="textOverlay">
+            <p>scroll down for zero<br>point mandalas</p>
         </div>
     </section>
+
+    <!-- Product Listing Section -->
+    <section class="products-section" id="productsSection">
+        <div class="products-container">
+            <h2>Zero Point Mandalas</h2>
+            <div class="products-grid">
+                <div class="product-card">
+                    <div class="product-image-placeholder"></div>
+                    <h3>Mandala Collection 1</h3>
+                    <p>Sacred geometry patterns</p>
+                </div>
+                <div class="product-card">
+                    <div class="product-image-placeholder"></div>
+                    <h3>Mandala Collection 2</h3>
+                    <p>Flower of Life series</p>
+                </div>
+                <div class="product-card">
+                    <div class="product-image-placeholder"></div>
+                    <h3>Mandala Collection 3</h3>
+                    <p>Metatron's Cube designs</p>
+                </div>
+                <div class="product-card">
+                    <div class="product-image-placeholder"></div>
+                    <h3>Mandala Collection 4</h3>
+                    <p>Custom patterns</p>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <script src="script-v3.js"></script>
 </body>
 </html>
-
