--- a/version4.html
+++ b/version4.html
@@ -32,26 +32,26 @@
         <div class="products-container">
             <h2>Zero Point Mandalas</h2>
             <div class="products-grid">
-                <div class="product-card">
-                    <div class="product-image-placeholder"></div>
-                    <h3>Mandala Collection 1</h3>
+                <a href="product1-dark.html" class="product-card">
+                    <div class="product-image-placeholder" style="background-image: url('assets/products/all-over-print-fanny-pack-white-front-68fd4bec8039a.jpg.webp'); background-size: cover; background-position: center;"></div>
+                    <h3>All-Over-Print Fanny Pack</h3>
                     <p>Sacred geometry patterns</p>
-                </div>
-                <div class="product-card">
-                    <div class="product-image-placeholder"></div>
-                    <h3>Mandala Collection 2</h3>
+                </a>
+                <a href="product2-dark.html" class="product-card">
+                    <div class="product-image-placeholder" style="background-image: url('assets/products/all-over-print-one-piece-swimsuit-white-front-68f9636073172.jpg.webp'); background-size: cover; background-position: center;"></div>
+                    <h3>All-Over-Print One-Piece Swimsuit</h3>
                     <p>Flower of Life series</p>
-                </div>
-                <div class="product-card">
-                    <div class="product-image-placeholder"></div>
-                    <h3>Mandala Collection 3</h3>
+                </a>
+                <a href="product3-dark.html" class="product-card">
+                    <div class="product-image-placeholder" style="background-image: url('assets/products/all-over-print-skater-dress-white-front-68e0301b6c2ee.jpg.webp'); background-size: cover; background-position: center;"></div>
+                    <h3>All-Over-Print Skater Dress</h3>
                     <p>Metatron's Cube designs</p>
-                </div>
-                <div class="product-card">
-                    <div class="product-image-placeholder"></div>
-                    <h3>Mandala Collection 4</h3>
+                </a>
+                <a href="product4-dark.html" class="product-card">
+                    <div class="product-image-placeholder" style="background-image: url('assets/products/mens-high-top-canvas-shoes-black-front-68f965fbe819f.jpg.webp'); background-size: cover; background-position: center;"></div>
+                    <h3>Men's High-Top Canvas Shoes</h3>
                     <p>Custom patterns</p>
-                </div>
+                </a>
             </div>
         </div>
     </section>
