--- a/version1.html
+++ b/version1.html
@@ -93,7 +93,7 @@
         
         <!-- Text overlay -->
         <div class="text-overlay" id="textOverlay">
-            <p>scroll down for zero<br>point mandalas</p>
+            <p>scroll to see products</p>
         </div>
     </section>
 
