--- a/version2.html
+++ b/version2.html
@@ -21,7 +21,7 @@
     <section class="splash-section" id="splashSection">
         <canvas id="mandalaCanvas"></canvas>
         <div class="text-overlay" id="textOverlay">
-            <p>scroll down for zero<br>point mandalas</p>
+            <p>scroll to see products</p>
         </div>
     </section>
 
