--- a/version3.html
+++ b/version3.html
@@ -21,7 +21,7 @@
     <section class="splash-section" id="splashSection">
         <div class="grid-container" id="gridContainer"></div>
         <div class="text-overlay" id="textOverlay">
-            <p>scroll down for zero<br>point mandalas</p>
+            <p>scroll to see products</p>
         </div>
     </section>
 
